# Bible_Agent

./: README.md  app.py  pyproject.toml  requirements.txt
src/bible_agent/: crew.py  main.py
src/bible_agent/config/: agents.yaml  tasks.yaml
