[project]
name = "bible_agent"
version = "0.1.0"
description = "BIBLE_AGENT using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai"
    "crewai[tools]>=0.130.0,<1.0.0",
    "crewai-tools",
    "gradio"
]

[project.scripts]
bible_agent = "bible_agent.main:run"
run_crew = "bible_agent.main:run"
train = "bible_agent.main:train"
replay = "bible_agent.main:replay"
test = "bible_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
